--- a/web/src/css/flowdetail.less
+++ b/web/src/css/flowdetail.less
@@ -34,7 +34,7 @@
     }
 
     .close-button:hover {
-        color: black;
+        color: var(--mitmweb-fg-strong);
     }
 
     .first-line {
