--- a/web/src/css/mode.less
+++ b/web/src/css/mode.less
@@ -138,7 +138,7 @@
                 flex: 1;
                 min-width: 0;
                 outline: none;
-                color: black;
+                color: var(--mitmweb-fg);
             }
 
             .dropdown-list {
